--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".TestActivity" />
         <activity android:name=".DemoA.DemoAactivity" />
         <activity android:name=".DemoB.DemoBactivity" />
         <activity android:name=".DemoC.DemoCactivity" />
