--- a/videoplayer/src/main/AndroidManifest.xml
+++ b/videoplayer/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="videonews.videoplayer">
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        >
-
+        android:supportsRtl="true">
+        <activity android:name=".full.VideoViewActivity"
+            android:screenOrientation="landscape">
+        </activity>
     </application>
 
 </manifest>
